@@ -3,37 +3,31 @@ package com.gregtechceu.gtceu.common.item.tool.behavior;
 import com.gregtechceu.gtceu.api.item.datacomponents.ToolBehaviors;
 import com.gregtechceu.gtceu.api.item.tool.behavior.IToolBehavior;
 import com.gregtechceu.gtceu.api.item.tool.behavior.ToolBehaviorType;
-import com.gregtechceu.gtceu.api.tag.TagUtil;
-import com.gregtechceu.gtceu.data.tag.GTDataComponents;
-import com.gregtechceu.gtceu.data.tools.GTToolBehaviors;
+import com.gregtechceu.gtceu.common.data.GTToolBehaviors;
+import com.gregtechceu.gtceu.common.data.item.GTDataComponents;
+import com.gregtechceu.gtceu.utils.TagUtil;
 
 import net.minecraft.core.BlockPos;
-import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.codec.ByteBufCodecs;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.*;
 import net.minecraft.world.item.context.BlockPlaceContext;
 import net.minecraft.world.item.context.UseOnContext;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.SoundType;
 import net.minecraft.world.level.block.state.BlockState;
 
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
+import io.netty.buffer.ByteBuf;
 import lombok.AllArgsConstructor;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
-// TODO this currently voids the used tool as well as a torch. how fix?
 @AllArgsConstructor
 public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
 
@@ -42,7 +36,7 @@ public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
             Codec.BOOL.optionalFieldOf("cache_slot_key", false).forGetter(val -> val.cacheSlotKey),
             Codec.INT.optionalFieldOf("cached_torch_slot", 0).forGetter(val -> val.cachedTorchSlot))
             .apply(instance, TorchPlaceBehavior::new));
-    public static final StreamCodec<RegistryFriendlyByteBuf, TorchPlaceBehavior> STREAM_CODEC = StreamCodec.composite(
+    public static final StreamCodec<ByteBuf, TorchPlaceBehavior> STREAM_CODEC = StreamCodec.composite(
             ByteBufCodecs.BOOL, val -> val.cacheSlotKey,
             ByteBufCodecs.VAR_INT, val -> val.cachedTorchSlot,
             TorchPlaceBehavior::new);
@@ -58,11 +52,24 @@ public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
     @Override
     public @NotNull InteractionResult onItemUse(UseOnContext context) {
         Player player = context.getPlayer();
+        if (player == null) {
+            return InteractionResult.PASS;
+        }
+
+        ItemStack stack = context.getItemInHand();
+
+        if (!player.getOffhandItem().isEmpty()) {
+            return InteractionResult.PASS;
+        }
+
+        if (!stack.getOrDefault(GTDataComponents.ACTIVE, false)) {
+            return InteractionResult.PASS;
+        }
 
         ItemStack slotStack;
         if (this.cacheSlotKey) {
             if (cachedTorchSlot < 0) {
-                slotStack = player.getInventory().offhand.get(0);
+                slotStack = player.getInventory().offhand.getFirst();
             } else {
                 slotStack = player.getInventory().items.get(cachedTorchSlot);
             }
@@ -74,7 +81,7 @@ public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
             slotStack = player.getInventory().offhand.get(i);
             if (checkAndPlaceTorch(context, slotStack)) {
                 final int finalI = i;
-                slotStack.update(GTDataComponents.TOOL_BEHAVIORS, ToolBehaviors.EMPTY,
+                stack.update(GTDataComponents.TOOL_BEHAVIORS, ToolBehaviors.EMPTY,
                         val -> val.withBehavior(new TorchPlaceBehavior(this.cacheSlotKey, -(finalI + 1))));
                 return InteractionResult.SUCCESS;
             }
@@ -83,7 +90,7 @@ public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
             slotStack = player.getInventory().items.get(i);
             if (checkAndPlaceTorch(context, slotStack)) {
                 final int finalI = i;
-                slotStack.update(GTDataComponents.TOOL_BEHAVIORS, ToolBehaviors.EMPTY,
+                stack.update(GTDataComponents.TOOL_BEHAVIORS, ToolBehaviors.EMPTY,
                         val -> val.withBehavior(new TorchPlaceBehavior(this.cacheSlotKey, finalI)));
                 return InteractionResult.SUCCESS;
             }
@@ -92,31 +99,41 @@ public class TorchPlaceBehavior implements IToolBehavior<TorchPlaceBehavior> {
     }
 
     private static boolean checkAndPlaceTorch(UseOnContext context, ItemStack slotStack) {
-        if (!slotStack.isEmpty()) {
-            Item slotItem = slotStack.getItem();
-            if (slotItem instanceof BlockItem slotItemBlock) {
-                Block slotBlock = slotItemBlock.getBlock();
-                if (slotBlock == Blocks.TORCH ||
-                        slotStack.is(TagUtil.createItemTag("torches"))) {
-                    BlockPos pos = context.getClickedPos();
-                    BlockState state = context.getLevel().getBlockState(pos);
-                    if (!state.canBeReplaced()) {
-                        pos = pos.relative(context.getClickedFace());
-                    }
-                    if (context.getPlayer().mayUseItemAt(pos, context.getClickedFace(), slotStack)) {
-                        var blockPlaceContext = new BlockPlaceContext(context);
-                        if (slotItemBlock.place(blockPlaceContext).consumesAction()) {
-                            BlockState slotState = context.getLevel().getBlockState(pos);
-                            SoundType soundtype = slotState.getSoundType(context.getLevel(), pos, context.getPlayer());
-                            context.getLevel().playSound(context.getPlayer(), pos, soundtype.getPlaceSound(),
-                                    SoundSource.BLOCKS,
-                                    (soundtype.getVolume() + 1.0F) / 2.0F, soundtype.getPitch() * 0.8F);
-                            if (!context.getPlayer().isCreative()) slotStack.shrink(1);
-                            return true;
-                        }
-                    }
-                }
+        if (slotStack.isEmpty())
+            return false;
+
+        Item slotItem = slotStack.getItem();
+
+        if (slotItem != Items.TORCH && !slotStack.is(TagUtil.createItemTag("torches")))
+            return false;
+
+        if (context.getPlayer() == null)
+            return false;
+
+        if (!(slotItem instanceof BlockItem blockItem)) {
+            return false;
+        }
+
+        BlockPos pos = context.getClickedPos();
+        BlockState state = context.getLevel().getBlockState(pos);
+
+        if (!state.canBeReplaced()) {
+            pos = pos.relative(context.getClickedFace());
+        }
+
+        if (context.getPlayer().mayUseItemAt(pos, context.getClickedFace(), slotStack)) {
+            var torchContext = new UseOnContext(context.getLevel(), context.getPlayer(), context.getHand(), slotStack,
+                    context.getHitResult());
+            var blockPlaceContext = new BlockPlaceContext(torchContext);
+            InteractionResult placed = blockItem.place(blockPlaceContext);
+            boolean wasPlaced = placed.consumesAction();
+            if (wasPlaced) {
+                SoundType sound = blockItem.getBlock().getSoundType(blockItem.getBlock().defaultBlockState(),
+                        context.getLevel(), pos, context.getPlayer());
+                context.getLevel().playSound(context.getPlayer(), pos, sound.getPlaceSound(), SoundSource.BLOCKS,
+                        (sound.getVolume() + 1.0F) / 2.0F, sound.getPitch() * 0.8F);
             }
+            return wasPlaced;
         }
         return false;
     }
